# nexplayer-v1

./: .gitignore  BUILD.md  CMakeLists.txt  HOT_RELOAD.md  LICENSE  README.md  build.sh  dev.sh
.github/workflows/: build.yml
qml/: AdvancedControls.qml  ControlBar.qml  EffectCard.qml  EffectsPanel.qml  FileDialog.qml  Icon.qml  ModernButton.qml  ModernSlider.qml  ParameterControl.qml  Settings.qml  SettingsPopup.qml  Theme.qml  TimelineBar.qml  Toast.qml  VideoDisplay.qml  main.qml  qml.qrc  qmldir
scripts/: create_appimage.sh  create_dmg.sh  deploy.sh  deploy_macos.sh  deploy_windows.bat
src/: main.cpp
src/audio/: AudioDecoder.cpp  AudioDecoder.h  AudioEngine.cpp  AudioEngine.h  AudioOutput.cpp  AudioOutput.h  EffectChain.cpp  EffectChain.h
src/audio/effects/: AudioEffect.h  CompressorEffect.cpp  CompressorEffect.h  DelayEffect.cpp  DelayEffect.h  EQEffect.cpp  EQEffect.h  FlangerEffect.cpp  FlangerEffect.h  PhaserEffect.cpp  PhaserEffect.h  ReverbEffect.cpp  ReverbEffect.h
src/core/: PlayerController.cpp  PlayerController.h
src/video/: VideoDecoder.cpp  VideoDecoder.h  VideoPlayer.cpp  VideoPlayer.h  VideoRenderer.cpp  VideoRenderer.h
